deploy/identityserver/identityserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identityserver-deployment
  labels:
    app: identityserver
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  selector:
    matchLabels:
      service: identityserver
  template:
    metadata:
      labels:
        app: identityserver
        service: identityserver
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "identityserver"
        dapr.io/app-port: "80"
    spec:
      containers:
        - name: identityserver
          image: rustemturk/identityserver4-sts-identity
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
              requests:
                memory: 1G
                cpu: 2000m
