deploy/identityserver/identityserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: identityservertest-svc
  labels:
    app: identityservertest
    service: identityservertest
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    service: identityservertest
