deploy/identityserver/identityserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: identityservertest-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: sts.skoruba.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: identityservertest-svc
            port:
              number: 80
